grid layout on bio section

--- a/index.html
+++ b/index.html
@@ -14,27 +14,32 @@
     </header>
 
 <section class="bio">
-    <div class="bio--text">
-        <h2>All about me</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti officiis totam consectetur sed minus voluptatum esse delectus rem culpa voluptas molestiae aspernatur odit praesentium explicabo similique at error, reprehenderit repudiandae commodi incidunt illo nobis! Officiis, et dolor! Cupiditate, repellendus aliquam veniam, asperiores a perspiciatis tenetur maiores reiciendis dolorum, numquam accusantium voluptas minus velit itaque sit tempora quibusdam esse voluptates tempore labore laudantium? Architecto quasi vel repellendus tenetur nobis veritatis a ex id alias corrupti magni harum obcaecati dignissimos dolorum eum asperiores maxime adipisci reprehenderit voluptatum ipsa, earum deleniti suscipit dolores. Autem explicabo commodi, ducimus ab animi nesciunt temporibus saepe velit!</p>
-    </div>
+    
+        <h2 id="bio--title">All about me</h2>
+        <p id="bio--blurb">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti officiis totam consectetur sed minus voluptatum esse delectus rem culpa voluptas molestiae aspernatur odit praesentium explicabo similique at error, reprehenderit repudiandae commodi incidunt illo nobis! Officiis, et dolor! Cupiditate, repellendus aliquam veniam, asperiores a perspiciatis tenetur maiores reiciendis dolorum, numquam accusantium voluptas minus velit itaque sit tempora quibusdam esse voluptates tempore labore laudantium? Architecto quasi vel repellendus tenetur nobis veritatis a ex id alias corrupti magni harum obcaecati dignissimos dolorum eum asperiores maxime adipisci reprehenderit voluptatum ipsa, earum deleniti suscipit dolores. Autem explicabo commodi, ducimus ab animi nesciunt temporibus saepe velit!</p>
 </section>
 
 <section class="gallery stroll">
         <h3 class="painting--title">Stroll</h3>
+        <div class="painting--container">
     <img src="images/stroll.jpg" alt="stroll by the forest" class="painting">
+</div>
     <p class="painting--blurb">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet laboriosam quas cumque, id vel reprehenderit eveniet non obcaecati quam optio, adipisci error repudiandae quia nisi ea facere quidem odio repellendus!</p>
 </section>
 
 <section class="gallery bridge">
         <h3 class="painting--title">bridge</h3>
-        <img src="images/bridge.jpg" alt="" class="painting">
+        <div class="painting--container">
+            <img src="images/bridge.jpg" alt="" class="painting">
+        </div>
         <p class="painting--blurb">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque qui natus dicta minus dolor magni pariatur quis. Nisi minus facilis quam minima sed vel magni odit! Nulla quasi quibusdam voluptatibus.</p>
 </section>
 
 <section class="gallery coot">
     <h3 class="painting--title">coot</h3>
+    <div class="painting--container">
     <img src="images/coot.jpg" alt="" class="painting">
+    </div>
     <p class="painting--blurb">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque qui natus dicta minus dolor magni pariatur quis. Nisi minus facilis quam minima sed vel magni odit! Nulla quasi quibusdam voluptatibus.</p>
 </section>
     
