--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="gallery-container portrait">
         <div class="gallery-item">
           <div class="image">
-            <img src="../images/bridge.jpg" alt="bridge" />
+            <img src="./images/bridge.jpg" alt="bridge" />
           </div>
           <div class="text">Bridge</div>
         </div>
@@ -62,7 +62,7 @@
       <div class="gallery-container square">
         <div class="gallery-item">
           <div class="image">
-            <img src="../images/coot.jpg" alt="Moorhen" />
+            <img src="./images/coot.jpg" alt="Moorhen" />
           </div>
           <div class="text">Moorhen</div>
         </div>
@@ -71,7 +71,7 @@
       <div class="gallery-container landscape">
         <div class="gallery-item">
           <div class="image">
-            <img src="../images/jaguar.jpg" alt="jaguar" />
+            <img src="./images/jaguar.jpg" alt="jaguar" />
           </div>
           <div class="text">Out of the Shadows</div>
         </div>
@@ -80,7 +80,7 @@
       <div class="gallery-container portrait">
         <div class="gallery-item">
           <div class="image">
-            <img src="../images/stroll.jpg" alt="stroll" />
+            <img src="./images/stroll.jpg" alt="stroll" />
           </div>
           <div class="text">Stroll</div>
         </div>
@@ -89,7 +89,7 @@
       <div class="gallery-container landscape">
         <div class="gallery-item">
           <div class="image">
-            <img src="../images/vineyard.jpg" alt="vineyard" />
+            <img src="./images/vineyard.jpg" alt="vineyard" />
           </div>
           <div class="text">Vineyard</div>
         </div>
@@ -98,7 +98,7 @@
       <div class="gallery-container portrait">
         <div class="gallery-item">
           <div class="image">
-            <img src="../images/woods.jpg" alt="woodland" />
+            <img src="./images/woods.jpg" alt="woodland" />
           </div>
           <div class="text">Woodland Glen</div>
         </div>
@@ -107,7 +107,7 @@
       <div class="gallery-container landscape">
         <div class="gallery-item">
           <div class="image">
-            <img src="../images/coot.jpg" alt="coot" />
+            <img src="./images/coot.jpg" alt="coot" />
           </div>
           <div class="text">Coot</div>
         </div>
@@ -116,7 +116,7 @@
       <div class="gallery-container landscape">
         <div class="gallery-item">
           <div class="image">
-            <img src="../images/jaguar.jpg" alt="jaguar" />
+            <img src="./images/jaguar.jpg" alt="jaguar" />
           </div>
           <div class="text">Jaguar</div>
         </div>
@@ -125,7 +125,7 @@
       <div class="gallery-container portrait">
         <div class="gallery-item">
           <div class="image">
-            <img src="../images/stroll.jpg" alt="stroll" />
+            <img src="./images/stroll.jpg" alt="stroll" />
           </div>
           <div class="text">Wander</div>
         </div>
@@ -134,7 +134,7 @@
       <div class="gallery-container landscape">
         <div class="gallery-item">
           <div class="image">
-            <img src="../images/vineyard.jpg" alt="beautiful" />
+            <img src="./images/vineyard.jpg" alt="beautiful" />
           </div>
           <div class="text">beautiful</div>
         </div>
@@ -143,7 +143,7 @@
       <div class="gallery-container portrait">
         <div class="gallery-item">
           <div class="image">
-            <img src="../images/woods.jpg" alt="coral" />
+            <img src="./images/woods.jpg" alt="coral" />
           </div>
           <div class="text">coral</div>
         </div>
@@ -152,7 +152,7 @@
       <div class="gallery-container square-medium">
         <div class="gallery-item">
           <div class="image">
-            <img src="../images/jaguarbw.jpg" alt="camera" />
+            <img src="./images/jaguarbw.jpg" alt="camera" />
           </div>
           <div class="text">camera</div>
         </div>
@@ -161,7 +161,7 @@
       <div class="gallery-container square-small">
         <div class="gallery-item">
           <div class="image">
-            <img src="../images/strollbw.jpg" alt="beach" />
+            <img src="./images/strollbw.jpg" alt="beach" />
           </div>
           <div class="text">beach</div>
         </div>
@@ -170,7 +170,7 @@
       <div class="gallery-container square-small">
         <div class="gallery-item">
           <div class="image">
-            <img src="../images/vineyardbw.jpg" alt="dinosaur" />
+            <img src="./images/vineyardbw.jpg" alt="dinosaur" />
           </div>
           <div class="text">dinosaur</div>
         </div>
@@ -179,7 +179,7 @@
       <div class="gallery-container square-small">
         <div class="gallery-item">
           <div class="image">
-            <img src="../images/vineyardbw.jpg" alt="dinosaur" />
+            <img src="./images/vineyardbw.jpg" alt="dinosaur" />
           </div>
           <div class="text">dinosaur</div>
         </div>
