--- a/index.html
+++ b/index.html
@@ -421,71 +421,88 @@
         </div>
       </div>
 
-      <!-- filler -->
-      <div class="gallery__item__container filler">
+      <div class="gallery__item__container">
         <div class="gallery__item">
           <div class="gallery__item__image">
-            <img src="./Paintings/Filler images/marshSqbw.jpg" alt="" />
+            <img src="./Paintings/Evening_Pasture.jpg" alt="" />
           </div>
           <div class="gallery__item__text">
             <div class="gallery__item__title">
-              <h3>Marsh</h3>
+              <h3>Evening Pasture</h3>
             </div>
             <div class="gallery__item__description">
-              <p>The actual image is in color</p>
+              <p>
+                Size: 50 x 40 cm <br />
+                Acrylic on canvas
+              </p>
             </div>
           </div>
         </div>
       </div>
 
-      <div class="gallery__item__container filler">
+      <div class="gallery__item__container">
         <div class="gallery__item">
           <div class="gallery__item__image">
-            <img src="./Paintings/Filler images/woodsbw.jpg" alt="" />
+            <img src="./Paintings/Forest_Edge.jpg" alt="" />
           </div>
           <div class="gallery__item__text">
             <div class="gallery__item__title">
-              <h3>Woodland</h3>
+              <h3>
+                Forest Edge <br />
+                (Cannock Chase)
+              </h3>
             </div>
             <div class="gallery__item__description">
-              <p>The actual image is in colour</p>
+              <p>
+                Size: 50 x 40 cm <br />
+                Acrylic on canvas
+              </p>
             </div>
           </div>
         </div>
       </div>
 
-      <div class="gallery__item__container filler">
+      <div class="gallery__item__container">
         <div class="gallery__item">
           <div class="gallery__item__image">
-            <img src="./Paintings/Filler images/vineyardbw.jpg" alt="" />
+            <img src="./Paintings/Woodland_Glade.jpg" alt="" />
           </div>
           <div class="gallery__item__text">
             <div class="gallery__item__title">
-              <h3>South African Vineyard</h3>
+              <h3>
+                Woodland Glade <br />
+                (Calke Abbey, Derbyshire)
+              </h3>
             </div>
             <div class="gallery__item__description">
-              <p>The actual painting is in colour</p>
+              <p>
+                Size: 50 x 40 cm <br />
+                Acrylic on canvas
+              </p>
             </div>
           </div>
         </div>
       </div>
 
-      <div class="gallery__item__container filler">
+      <!-- new item template -->
+      <!-- <div class="gallery__item__container">
         <div class="gallery__item">
           <div class="gallery__item__image">
-            <img src="./Paintings/Filler images/moorhenbw.jpg" alt="" />
+            <img src="file name" alt="" />
           </div>
           <div class="gallery__item__text">
             <div class="gallery__item__title">
-              <h3>The Secret World of the Moorhen</h3>
+              <h3>title</h3>
             </div>
             <div class="gallery__item__description">
-              <p>The actual image is in colour</p>
+              <p>
+                Size: <br>
+
+              </p>
             </div>
           </div>
         </div>
-      </div>
-      <!-- end of filler -->
+      </div> -->
     </section>
     <!-- Sticky contact button?? -->
     <!-- form -->
