Fix form input box border issue

--- a/index.html
+++ b/index.html
@@ -22,11 +22,6 @@
     ></script>
   </head>
   <body>
-    <a href="#enquiry"
-      ><button class="enquire">
-        <i class="far fa-envelope"></i><br />Enquire
-      </button></a
-    >
     <!-- hero section -->
     <header class="hero">
       <h1 class="hero__title">
@@ -504,7 +499,12 @@
         </div>
       </div> -->
     </section>
-    <!-- Sticky contact button?? -->
+    <!-- Sticky contact button -->
+    <a href="#enquiry"
+      ><button class="enquire">
+        <i class="far fa-envelope"></i><br />Enquire
+      </button></a
+    >
     <!-- form -->
     <footer>
       <div id="enquiry">
