Add background blur on intro and form

--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
     ></script>
   </head>
   <body>
+    <!-- Fixed contact button -->
+    <a href="#enquiry"
+      ><button class="enquire">
+        <i class="far fa-envelope"></i><br />Enquire
+      </button></a
+    >
     <!-- hero section -->
     <header class="hero">
       <h1 class="hero__title">
@@ -499,12 +505,7 @@
         </div>
       </div> -->
     </section>
-    <!-- Sticky contact button -->
-    <a href="#enquiry"
-      ><button class="enquire">
-        <i class="far fa-envelope"></i><br />Enquire
-      </button></a
-    >
+
     <!-- form -->
     <footer>
       <div id="enquiry">
