Add new paintings

--- a/index.html
+++ b/index.html
@@ -71,24 +71,6 @@
     <!-- gallery section -->
     <section class="gallery">
       <!-- first gallery item -->
-      <div class="gallery__item__container portrait">
-        <div class="gallery__item">
-          <div class="gallery__item__image">
-            <img src="Paintings/Pembrokeshire_Peregrines.jpg" alt="" />
-          </div>
-          <div class="gallery__item__text">
-            <div class="gallery__item__title">
-              <h3>Pair of Pembrokeshire Peregrines</h3>
-            </div>
-            <div class="gallery__item__description">
-              <p>
-                Size: 70 x 40 cm<br />
-                Acrylic on primed hardboard panel
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
 
       <div class="gallery__item__container landscape">
         <div class="gallery__item">
@@ -141,6 +123,25 @@
               <p>
                 Size: 50 x 40 cm <br />
                 Acrylic on canvas panel
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="gallery__item__container">
+        <div class="gallery__item">
+          <div class="gallery__item__image">
+            <img src="Paintings/Waiting_for_Spring.jpg" alt="" />
+          </div>
+          <div class="gallery__item__text">
+            <div class="gallery__item__title">
+              <h3>Waiting For Spring</h3>
+            </div>
+            <div class="gallery__item__description">
+              <p>
+                Sold <br />
+                Acrylics
               </p>
             </div>
           </div>
@@ -245,6 +246,44 @@
         </div>
       </div>
 
+      <div class="gallery__item__container">
+        <div class="gallery__item">
+          <div class="gallery__item__image">
+            <img src="Paintings/Over-wintering_snipe.jpg" alt="" />
+          </div>
+          <div class="gallery__item__text">
+            <div class="gallery__item__title">
+              <h3>Over-wintering Snipe</h3>
+            </div>
+            <div class="gallery__item__description">
+              <p>
+                Sold <br />
+                Acrylics
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="gallery__item__container portrait">
+        <div class="gallery__item">
+          <div class="gallery__item__image">
+            <img src="Paintings/Pembrokeshire_Peregrines.jpg" alt="" />
+          </div>
+          <div class="gallery__item__text">
+            <div class="gallery__item__title">
+              <h3>Pair of Pembrokeshire Peregrines</h3>
+            </div>
+            <div class="gallery__item__description">
+              <p>
+                Size: 70 x 40 cm<br />
+                Acrylic on primed hardboard panel
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div class="gallery__item__container portrait">
         <div class="gallery__item">
           <div class="gallery__item__image">
@@ -280,6 +319,25 @@
               <p>
                 Size: 52 x 41 cm <br />
                 Acrylic on primed hardboard panel
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="gallery__item__container">
+        <div class="gallery__item">
+          <div class="gallery__item__image">
+            <img src="Paintings/Newlands_Valley.jpg" alt="" />
+          </div>
+          <div class="gallery__item__text">
+            <div class="gallery__item__title">
+              <h3>Newlands Valley <br />(Lake District)</h3>
+            </div>
+            <div class="gallery__item__description">
+              <p>
+                Sold <br />
+                Acrylics
               </p>
             </div>
           </div>
@@ -346,6 +404,28 @@
         </div>
       </div>
 
+      <div class="gallery__item__container">
+        <div class="gallery__item">
+          <div class="gallery__item__image">
+            <img src="./Paintings/Forest_Edge.jpg" alt="" />
+          </div>
+          <div class="gallery__item__text">
+            <div class="gallery__item__title">
+              <h3>
+                Forest Edge <br />
+                (Cannock Chase)
+              </h3>
+            </div>
+            <div class="gallery__item__description">
+              <p>
+                Size: 50 x 40 cm <br />
+                Acrylic on canvas
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div class="gallery__item__container landscape">
         <div class="gallery__item">
           <div class="gallery__item__image">
@@ -403,6 +483,25 @@
         </div>
       </div>
 
+      <div class="gallery__item__container">
+        <div class="gallery__item">
+          <div class="gallery__item__image">
+            <img src="Paintings/Canada_Geese.jpg" alt="" />
+          </div>
+          <div class="gallery__item__text">
+            <div class="gallery__item__title">
+              <h3>Canada Geese</h3>
+            </div>
+            <div class="gallery__item__description">
+              <p>
+                Sold <br />
+                Acrylics
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div class="gallery__item__container landscape">
         <div class="gallery__item">
           <div class="gallery__item__image">
@@ -430,28 +529,6 @@
           <div class="gallery__item__text">
             <div class="gallery__item__title">
               <h3>Evening Pasture</h3>
-            </div>
-            <div class="gallery__item__description">
-              <p>
-                Size: 50 x 40 cm <br />
-                Acrylic on canvas
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="gallery__item__container">
-        <div class="gallery__item">
-          <div class="gallery__item__image">
-            <img src="./Paintings/Forest_Edge.jpg" alt="" />
-          </div>
-          <div class="gallery__item__text">
-            <div class="gallery__item__title">
-              <h3>
-                Forest Edge <br />
-                (Cannock Chase)
-              </h3>
             </div>
             <div class="gallery__item__description">
               <p>
