--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>David Catlow Art</title>
+    <title>The Gallery of David Catlow, Artist</title>
+    <meta
+      name="decription"
+      content="An online gallery for the artwork of David Catlow. Showcasing watercolours, acrylic pieces, sketches and nature studies."
+    />
+
     <link rel="stylesheet" href="styles.css" />
 
     <!-- fonts -->
@@ -22,12 +27,41 @@
     ></script>
   </head>
   <body>
-    <!-- Fixed contact button -->
-    <a href="#enquiry"
-      ><button class="enquire">
-        <i class="far fa-envelope"></i><br />Enquire
-      </button></a
-    >
+    <!-- nav menu -->
+    <input type="checkbox" id="nav-toggle" class="nav-toggle" />
+    <nav>
+      <!-- Fixed gallery button -->
+      <a href="./Pages/sketches.html"
+        ><button class="nav--btn gallery__return">
+          <i class="fas fa-palette"></i><br />Sketch <br />
+          book
+        </button></a
+      >
+      <!-- Fixed contact button -->
+      <a href="#enquiry"
+        ><button class="nav--btn">
+          <i class="far fa-envelope"></i><br />Enquire
+        </button></a
+      >
+
+      <a href="#gallery"
+        ><button class="nav--btn">
+          <i class="fas fa-chevron-up"></i><br />To the <br />
+          top
+        </button></a
+      >
+      <a href="#gallery--end"
+        ><button class="nav--btn">
+          <i class="fas fa-chevron-down"></i><br />To the <br />
+          end
+        </button></a
+      >
+    </nav>
+    <label for="nav-toggle" class="nav-toggle-label"
+      ><i class="fas fa-bars" id="hamburger"></i>
+      <i class="fas fa-times" id="hamburger--close"></i>
+    </label>
+
     <!-- hero section -->
     <header class="hero">
       <h1 class="hero__title">
@@ -38,8 +72,8 @@
     <section class="intro">
       <div class="intro__text">
         <img
-          src="BackgroundImages/david_profile_small.jpg"
-          alt="David Catlow"
+          src="./Images/BackgroundImages/david_profile_small.jpg"
+          alt="David Catlow, Artist"
           id="intro__picture"
         />
 
@@ -69,13 +103,16 @@
     </section>
 
     <!-- gallery section -->
-    <section class="gallery">
+    <section class="gallery" id="gallery">
       <!-- first gallery item -->
 
       <div class="gallery__item__container landscape">
         <div class="gallery__item">
           <div class="gallery__item__image">
-            <img src="Paintings/African_Fish_Eagle.jpg" alt="" />
+            <img
+              src="./Images/Paintings/African_Fish_Eagle.jpg"
+              alt="African Fish Eagle flying over a lake"
+            />
           </div>
           <div class="gallery__item__text">
             <div class="gallery__item__title">
@@ -94,7 +131,10 @@
       <div class="gallery__item__container square">
         <div class="gallery__item">
           <div class="gallery__item__image">
-            <img src="Paintings/After_the_Storm.jpg" alt="" />
+            <img
+              src="./Images/Paintings/After_the_Storm.jpg"
+              alt="Stone bridge and stormy sky"
+            />
           </div>
           <div class="gallery__item__text">
             <div class="gallery__item__title">
@@ -113,7 +153,10 @@
       <div class="gallery__item__container square">
         <div class="gallery__item">
           <div class="gallery__item__image">
-            <img src="Paintings/Cliffs_Cader_Idris.jpg" alt="" />
+            <img
+              src="./Images/Paintings/Cliffs_Cader_Idris.jpg"
+              alt="Cader Idris covered in snow"
+            />
           </div>
           <div class="gallery__item__text">
             <div class="gallery__item__title">
@@ -132,7 +175,10 @@
       <div class="gallery__item__container">
         <div class="gallery__item">
           <div class="gallery__item__image">
-            <img src="Paintings/Waiting_for_Spring.jpg" alt="" />
+            <img
+              src="./Images/Paintings/Waiting_for_Spring.jpg"
+              alt="Waterfowl asleep in the snow"
+            />
           </div>
           <div class="gallery__item__text">
             <div class="gallery__item__title">
@@ -151,7 +197,10 @@
       <div class="gallery__item__container square">
         <div class="gallery__item">
           <div class="gallery__item__image">
-            <img src="Paintings/Cottages_at_Rainow_Low.jpg" alt="" />
+            <img
+              src="./Images/Paintings/Cottages_at_Rainow_Low.jpg"
+              alt="Cottages in Rainow village"
+            />
           </div>
           <div class="gallery__item__text">
             <div class="gallery__item__title">
@@ -167,10 +216,38 @@
         </div>
       </div>
 
+      <div class="gallery__item__container">
+        <div class="gallery__item">
+          <div class="gallery__item__image">
+            <img
+              src="./Images/Paintings/Jenkin_Chapel.jpg"
+              alt="Pencil sketch of Jenkin Chapel"
+            />
+          </div>
+          <div class="gallery__item__text">
+            <div class="gallery__item__title">
+              <h3>
+                Jenkin Chapel <br />
+                (Derbyshire)
+              </h3>
+            </div>
+            <div class="gallery__item__description">
+              <p>
+                Size: 35 x 25 cm<br />
+                Graphite pencil on paper
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div class="gallery__item__container square">
         <div class="gallery__item">
           <div class="gallery__item__image">
-            <img src="Paintings/Freedom.jpg" alt="" />
+            <img
+              src="./Images/Paintings/Freedom.jpg"
+              alt="A small sailing boat on the Sound of Mull"
+            />
           </div>
           <div class="gallery__item__text">
             <div class="gallery__item__title">
@@ -189,7 +266,10 @@
       <div class="gallery__item__container square">
         <div class="gallery__item">
           <div class="gallery__item__image">
-            <img src="Paintings/Great_Northern_Divers.jpg" alt="" />
+            <img
+              src="./Images/Paintings/Great_Northern_Divers.jpg"
+              alt="Great Northern Divers having a chat on Lochindorb"
+            />
           </div>
           <div class="gallery__item__text">
             <div class="gallery__item__title">
@@ -211,7 +291,10 @@
       <div class="gallery__item__container square">
         <div class="gallery__item">
           <div class="gallery__item__image">
-            <img src="Paintings/Hough_Hole.jpg" alt="" />
+            <img
+              src="./Images/Paintings/Hough_Hole.jpg"
+              alt="Sketch of cottages at Hough Hole, Rainow"
+            />
           </div>
           <div class="gallery__item__text">
             <div class="gallery__item__title">
@@ -227,10 +310,35 @@
         </div>
       </div>
 
+      <div class="gallery__item__container">
+        <div class="gallery__item">
+          <div class="gallery__item__image">
+            <img
+              src="./Images/Paintings/Kingfisher.jpg"
+              alt="Kingfisher perched on a branch in front of a waterfall"
+            />
+          </div>
+          <div class="gallery__item__text">
+            <div class="gallery__item__title">
+              <h3>Kingfisher <br />(Monsal Dale, Derbyshire)</h3>
+            </div>
+            <div class="gallery__item__description">
+              <p>
+                Sold <br />
+                Acrylic
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div class="gallery__item__container landscape">
         <div class="gallery__item">
           <div class="gallery__item__image">
-            <img src="Paintings/In_Retirement.jpg" alt="" />
+            <img
+              src="./Images/Paintings/In_Retirement.jpg"
+              alt="Old boats on the shore of the Isle of Mull"
+            />
           </div>
           <div class="gallery__item__text">
             <div class="gallery__item__title">
@@ -249,7 +357,10 @@
       <div class="gallery__item__container">
         <div class="gallery__item">
           <div class="gallery__item__image">
-            <img src="Paintings/Over-wintering_snipe.jpg" alt="" />
+            <img
+              src="./Images/Paintings/Over-wintering_snipe.jpg"
+              alt="Snipe probing beneath a pink sky"
+            />
           </div>
           <div class="gallery__item__text">
             <div class="gallery__item__title">
@@ -268,7 +379,10 @@
       <div class="gallery__item__container portrait">
         <div class="gallery__item">
           <div class="gallery__item__image">
-            <img src="Paintings/Pembrokeshire_Peregrines.jpg" alt="" />
+            <img
+              src="./Images/Paintings/Pembrokeshire_Peregrines.jpg"
+              alt="Pergrines perched on a rock in Pembrokeshire"
+            />
           </div>
           <div class="gallery__item__text">
             <div class="gallery__item__title">
@@ -287,7 +401,10 @@
       <div class="gallery__item__container portrait">
         <div class="gallery__item">
           <div class="gallery__item__image">
-            <img src="Paintings/Lakeland_Post.jpg" alt="" />
+            <img
+              src="./Images/Paintings/Lakeland_Post.jpg"
+              alt="Postbox in an old stone wall"
+            />
           </div>
           <div class="gallery__item__text">
             <div class="gallery__item__title">
@@ -306,7 +423,10 @@
       <div class="gallery__item__container square">
         <div class="gallery__item">
           <div class="gallery__item__image">
-            <img src="Paintings/Morning_Flight.jpg" alt="" />
+            <img
+              src="./Images/Paintings/Morning_Flight.jpg"
+              alt="Barnacle Geese flying and stretching beneath a yellow morning sky"
+            />
           </div>
           <div class="gallery__item__text">
             <div class="gallery__item__title">
@@ -328,7 +448,10 @@
       <div class="gallery__item__container">
         <div class="gallery__item">
           <div class="gallery__item__image">
-            <img src="Paintings/Newlands_Valley.jpg" alt="" />
+            <img
+              src="./Images/Paintings/Newlands_Valley.jpg"
+              alt="Scenic view of Newlands Valley"
+            />
           </div>
           <div class="gallery__item__text">
             <div class="gallery__item__title">
@@ -347,7 +470,10 @@
       <div class="gallery__item__container square">
         <div class="gallery__item">
           <div class="gallery__item__image">
-            <img src="Paintings/Out_Shadows.jpg" alt="" />
+            <img
+              src="./Images/Paintings/Out_Shadows.jpg"
+              alt="A jaguar emerging from a dark forest in the Pantanal"
+            />
           </div>
           <div class="gallery__item__text">
             <div class="gallery__item__title">
@@ -366,7 +492,10 @@
       <div class="gallery__item__container square">
         <div class="gallery__item">
           <div class="gallery__item__image">
-            <img src="Paintings/The_Referee.jpg" alt="" />
+            <img
+              src="./Images/Paintings/The_Referee.jpg"
+              alt="Three Goldfinches arguing on a branch"
+            />
           </div>
           <div class="gallery__item__text">
             <div class="gallery__item__title">
@@ -388,7 +517,10 @@
       <div class="gallery__item__container portrait">
         <div class="gallery__item">
           <div class="gallery__item__image">
-            <img src="Paintings/Winter_Feeding.jpg" alt="" />
+            <img
+              src="./Images/Paintings/Winter_Feeding.jpg"
+              alt="Sheep eating in front of a wintery Kerridge"
+            />
           </div>
           <div class="gallery__item__text">
             <div class="gallery__item__title">
@@ -407,7 +539,10 @@
       <div class="gallery__item__container">
         <div class="gallery__item">
           <div class="gallery__item__image">
-            <img src="./Paintings/Forest_Edge.jpg" alt="" />
+            <img
+              src="./Images/Paintings/Forest_Edge.jpg"
+              alt="Two people strolling by a large forest"
+            />
           </div>
           <div class="gallery__item__text">
             <div class="gallery__item__title">
@@ -426,10 +561,35 @@
         </div>
       </div>
 
+      <div class="gallery__item__container">
+        <div class="gallery__item">
+          <div class="gallery__item__image">
+            <img
+              src="./Images/Paintings/Kinder_reservoir.jpg"
+              alt="View of Kinder Reservoir and Plateau"
+            />
+          </div>
+          <div class="gallery__item__text">
+            <div class="gallery__item__title">
+              <h3>Kinder Reservoir and Plateau</h3>
+            </div>
+            <div class="gallery__item__description">
+              <p>
+                Sold<br />
+                Oil
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div class="gallery__item__container landscape">
         <div class="gallery__item">
           <div class="gallery__item__image">
-            <img src="./Paintings/moorhen.jpg" alt="" />
+            <img
+              src="./Images/Paintings/moorhen.jpg"
+              alt="A moorhen traversing lilypads"
+            />
           </div>
           <div class="gallery__item__text">
             <div class="gallery__item__title">
@@ -448,7 +608,10 @@
       <div class="gallery__item__container landscape">
         <div class="gallery__item">
           <div class="gallery__item__image">
-            <img src="./Paintings/waverockL.jpg" alt="" />
+            <img
+              src="./Images/Paintings/waverockL.jpg"
+              alt="Waves crashing in front of Church Rock, Pembrokeshire"
+            />
           </div>
           <div class="gallery__item__text">
             <div class="gallery__item__title">
@@ -467,7 +630,10 @@
       <div class="gallery__item__container square">
         <div class="gallery__item">
           <div class="gallery__item__image">
-            <img src="./Paintings/lighthouseSq.jpg" alt="" />
+            <img
+              src="./Images/Paintings/lighthouseSq.jpg"
+              alt="Ornsay Lighthouse viewed from the Isle of Skye"
+            />
           </div>
           <div class="gallery__item__text">
             <div class="gallery__item__title">
@@ -486,7 +652,10 @@
       <div class="gallery__item__container">
         <div class="gallery__item">
           <div class="gallery__item__image">
-            <img src="Paintings/Canada_Geese.jpg" alt="" />
+            <img
+              src="./Images/Paintings/Canada_Geese.jpg"
+              alt="Canada Geese foraging on a small peninsula"
+            />
           </div>
           <div class="gallery__item__text">
             <div class="gallery__item__title">
@@ -505,7 +674,10 @@
       <div class="gallery__item__container landscape">
         <div class="gallery__item">
           <div class="gallery__item__image">
-            <img src="./Paintings/vineyard.jpg" alt="" />
+            <img
+              src="./Images/Paintings/vineyard.jpg"
+              alt="A dutch style vineyard in Stellenbosch"
+            />
           </div>
           <div class="gallery__item__text">
             <div class="gallery__item__title">
@@ -524,7 +696,10 @@
       <div class="gallery__item__container">
         <div class="gallery__item">
           <div class="gallery__item__image">
-            <img src="./Paintings/Evening_Pasture.jpg" alt="" />
+            <img
+              src="./Images/Paintings/Evening_Pasture.jpg"
+              alt="Cows feeding in a wooded pasture by a river"
+            />
           </div>
           <div class="gallery__item__text">
             <div class="gallery__item__title">
@@ -540,10 +715,13 @@
         </div>
       </div>
 
-      <div class="gallery__item__container">
+      <div class="gallery__item__container" id="gallery--end">
         <div class="gallery__item">
           <div class="gallery__item__image">
-            <img src="./Paintings/Woodland_Glade.jpg" alt="" />
+            <img
+              src="./Images/Paintings/Woodland_Glade.jpg"
+              alt="The sun casting shadows through an autumnal woodland glade"
+            />
           </div>
           <div class="gallery__item__text">
             <div class="gallery__item__title">
@@ -589,7 +767,12 @@
         <h3 class="enquiry__text">Contact Me</h3>
         <p>To enquire about any of my paintings please use this form:</p>
       </div>
-      <form name="enquiry" method="POST" data-netlify="true">
+      <form
+        name="enquiry"
+        method="POST"
+        data-netlify="true"
+        action="./Pages/success.html"
+      >
         <div class="form--left">
           <div class="field">
             <label for="name">Name:</label>
@@ -652,9 +835,6 @@
               minlength="20ch"
               required
             ></textarea>
-          </div>
-          <div class="field">
-            <div data-netlify-recaptcha="true"></div>
           </div>
 
           <div>
