changed gallery grid layout

--- a/index.html
+++ b/index.html
@@ -110,8 +110,9 @@
         <div class="gallery__item">
           <div class="gallery__item__image">
             <img
-              src="./Images/Paintings/African_Fish_Eagle.jpg"
+              src="./Images/Paintings/Preview/African_Fish_Eagle.jpg"
               alt="African Fish Eagle flying over a lake"
+              data-original="African_Fish_Eagle.jpg"
             />
           </div>
           <div class="gallery__item__text">
@@ -132,8 +133,9 @@
         <div class="gallery__item">
           <div class="gallery__item__image">
             <img
-              src="./Images/Paintings/After_the_Storm.jpg"
+              src="./Images/Paintings/Preview/After_the_Storm.jpg"
               alt="Stone bridge and stormy sky"
+              data-original="After_the_Storm.jpg"
             />
           </div>
           <div class="gallery__item__text">
@@ -154,8 +156,9 @@
         <div class="gallery__item">
           <div class="gallery__item__image">
             <img
-              src="./Images/Paintings/Cliffs_Cader_Idris.jpg"
+              src="./Images/Paintings/Preview/Cliffs_Cader_Idris.jpg"
               alt="Cader Idris covered in snow"
+              data-original="Cliffs_Cader_Idris.jpg"
             />
           </div>
           <div class="gallery__item__text">
@@ -176,8 +179,9 @@
         <div class="gallery__item">
           <div class="gallery__item__image">
             <img
-              src="./Images/Paintings/Waiting_for_Spring.jpg"
+              src="./Images/Paintings/Preview/Waiting_for_Spring.jpg"
               alt="Waterfowl asleep in the snow"
+              data-original="Waiting_for_Spring.jpg"
             />
           </div>
           <div class="gallery__item__text">
@@ -198,8 +202,9 @@
         <div class="gallery__item">
           <div class="gallery__item__image">
             <img
-              src="./Images/Paintings/Cottages_at_Rainow_Low.jpg"
+              src="./Images/Paintings/Preview/Cottages_at_Rainow_Low.jpg"
               alt="Cottages in Rainow village"
+              data-original="Cottages_at_Rainow_Low.jpg"
             />
           </div>
           <div class="gallery__item__text">
@@ -220,8 +225,9 @@
         <div class="gallery__item">
           <div class="gallery__item__image">
             <img
-              src="./Images/Paintings/Jenkin_Chapel.jpg"
+              src="./Images/Paintings/Preview/Jenkin_Chapel.jpg"
               alt="Pencil sketch of Jenkin Chapel"
+              data-original="Jenkin_Chapel.jpg"
             />
           </div>
           <div class="gallery__item__text">
@@ -245,8 +251,9 @@
         <div class="gallery__item">
           <div class="gallery__item__image">
             <img
-              src="./Images/Paintings/Freedom.jpg"
+              src="./Images/Paintings/Preview/Freedom.jpg"
               alt="A small sailing boat on the Sound of Mull"
+              data-original="Freedom.jpg"
             />
           </div>
           <div class="gallery__item__text">
@@ -267,8 +274,9 @@
         <div class="gallery__item">
           <div class="gallery__item__image">
             <img
-              src="./Images/Paintings/Great_Northern_Divers.jpg"
+              src="./Images/Paintings/Preview/Great_Northern_Divers.jpg"
               alt="Great Northern Divers having a chat on Lochindorb"
+              data-original="Great_Northern_Divers.jpg"
             />
           </div>
           <div class="gallery__item__text">
@@ -292,8 +300,9 @@
         <div class="gallery__item">
           <div class="gallery__item__image">
             <img
-              src="./Images/Paintings/Hough_Hole.jpg"
+              src="./Images/Paintings/Preview/Hough_Hole.jpg"
               alt="Sketch of cottages at Hough Hole, Rainow"
+              data-original="Hough_Hole.jpg"
             />
           </div>
           <div class="gallery__item__text">
@@ -314,8 +323,9 @@
         <div class="gallery__item">
           <div class="gallery__item__image">
             <img
-              src="./Images/Paintings/Kingfisher.jpg"
+              src="./Images/Paintings/Preview/Kingfisher.jpg"
               alt="Kingfisher perched on a branch in front of a waterfall"
+              data-original="Kingfisher.jpg"
             />
           </div>
           <div class="gallery__item__text">
@@ -336,8 +346,9 @@
         <div class="gallery__item">
           <div class="gallery__item__image">
             <img
-              src="./Images/Paintings/In_Retirement.jpg"
+              src="./Images/Paintings/Preview/In_Retirement.jpg"
               alt="Old boats on the shore of the Isle of Mull"
+              data-original="In_Retirement.jpg"
             />
           </div>
           <div class="gallery__item__text">
@@ -358,8 +369,9 @@
         <div class="gallery__item">
           <div class="gallery__item__image">
             <img
-              src="./Images/Paintings/Over-wintering_snipe.jpg"
+              src="./Images/Paintings/Preview/Over-wintering_snipe.jpg"
               alt="Snipe probing beneath a pink sky"
+              data-original="Over-wintering_snipe.jpg"
             />
           </div>
           <div class="gallery__item__text">
@@ -380,8 +392,9 @@
         <div class="gallery__item">
           <div class="gallery__item__image">
             <img
-              src="./Images/Paintings/Pembrokeshire_Peregrines.jpg"
+              src="./Images/Paintings/Preview/Pembrokeshire_Peregrines.jpg"
               alt="Pergrines perched on a rock in Pembrokeshire"
+              data-original="Pembrokeshire_Peregrines.jpg"
             />
           </div>
           <div class="gallery__item__text">
@@ -402,8 +415,9 @@
         <div class="gallery__item">
           <div class="gallery__item__image">
             <img
-              src="./Images/Paintings/Lakeland_Post.jpg"
+              src="./Images/Paintings/Preview/Lakeland_Post.jpg"
               alt="Postbox in an old stone wall"
+              data-original="Lakeland_Post.jpg"
             />
           </div>
           <div class="gallery__item__text">
@@ -424,8 +438,9 @@
         <div class="gallery__item">
           <div class="gallery__item__image">
             <img
-              src="./Images/Paintings/Morning_Flight.jpg"
+              src="./Images/Paintings/Preview/Morning_Flight.jpg"
               alt="Barnacle Geese flying and stretching beneath a yellow morning sky"
+              data-original="Morning_Flight.jpg"
             />
           </div>
           <div class="gallery__item__text">
@@ -449,8 +464,9 @@
         <div class="gallery__item">
           <div class="gallery__item__image">
             <img
-              src="./Images/Paintings/Newlands_Valley.jpg"
+              src="./Images/Paintings/Preview/Newlands_Valley.jpg"
               alt="Scenic view of Newlands Valley"
+              data-original="Newlands_Valley.jpg"
             />
           </div>
           <div class="gallery__item__text">
@@ -471,8 +487,9 @@
         <div class="gallery__item">
           <div class="gallery__item__image">
             <img
-              src="./Images/Paintings/Out_Shadows.jpg"
+              src="./Images/Paintings/Preview/Out_Shadows.jpg"
               alt="A jaguar emerging from a dark forest in the Pantanal"
+              data-original="Out_Shadows.jpg"
             />
           </div>
           <div class="gallery__item__text">
@@ -493,8 +510,9 @@
         <div class="gallery__item">
           <div class="gallery__item__image">
             <img
-              src="./Images/Paintings/The_Referee.jpg"
+              src="./Images/Paintings/Preview/The_Referee.jpg"
               alt="Three Goldfinches arguing on a branch"
+              data-original="The_Referee.jpg"
             />
           </div>
           <div class="gallery__item__text">
@@ -518,8 +536,9 @@
         <div class="gallery__item">
           <div class="gallery__item__image">
             <img
-              src="./Images/Paintings/Winter_Feeding.jpg"
+              src="./Images/Paintings/Preview/Winter_Feeding.jpg"
               alt="Sheep eating in front of a wintery Kerridge"
+              data-original="Winter_Feeding.jpg"
             />
           </div>
           <div class="gallery__item__text">
@@ -540,8 +559,9 @@
         <div class="gallery__item">
           <div class="gallery__item__image">
             <img
-              src="./Images/Paintings/Forest_Edge.jpg"
+              src="./Images/Paintings/Preview/Forest_Edge.jpg"
               alt="Two people strolling by a large forest"
+              data-original="Forest_Edge.jpg"
             />
           </div>
           <div class="gallery__item__text">
@@ -565,8 +585,9 @@
         <div class="gallery__item">
           <div class="gallery__item__image">
             <img
-              src="./Images/Paintings/Kinder_reservoir.jpg"
+              src="./Images/Paintings/Preview/Kinder_reservoir.jpg"
               alt="View of Kinder Reservoir and Plateau"
+              data-original="Kinder_reservoir.jpg"
             />
           </div>
           <div class="gallery__item__text">
@@ -587,8 +608,9 @@
         <div class="gallery__item">
           <div class="gallery__item__image">
             <img
-              src="./Images/Paintings/moorhen.jpg"
+              src="./Images/Paintings/Preview/moorhen.jpg"
               alt="A moorhen traversing lilypads"
+              data-original="moorhen.jpg"
             />
           </div>
           <div class="gallery__item__text">
@@ -609,8 +631,9 @@
         <div class="gallery__item">
           <div class="gallery__item__image">
             <img
-              src="./Images/Paintings/waverockL.jpg"
+              src="./Images/Paintings/Preview/waverockL.jpg"
               alt="Waves crashing in front of Church Rock, Pembrokeshire"
+              data-original="waverockL.jpg"
             />
           </div>
           <div class="gallery__item__text">
@@ -631,8 +654,9 @@
         <div class="gallery__item">
           <div class="gallery__item__image">
             <img
-              src="./Images/Paintings/lighthouseSq.jpg"
+              src="./Images/Paintings/Preview/lighthouseSq.jpg"
               alt="Ornsay Lighthouse viewed from the Isle of Skye"
+              data-original="lighthouseSq.jpg"
             />
           </div>
           <div class="gallery__item__text">
@@ -653,8 +677,9 @@
         <div class="gallery__item">
           <div class="gallery__item__image">
             <img
-              src="./Images/Paintings/Canada_Geese.jpg"
+              src="./Images/Paintings/Preview/Canada_Geese.jpg"
               alt="Canada Geese foraging on a small peninsula"
+              data-original="Canada_Geese.jpg"
             />
           </div>
           <div class="gallery__item__text">
@@ -675,8 +700,9 @@
         <div class="gallery__item">
           <div class="gallery__item__image">
             <img
-              src="./Images/Paintings/vineyard.jpg"
+              src="./Images/Paintings/Preview/vineyard.jpg"
               alt="A dutch style vineyard in Stellenbosch"
+              data-original="vineyard.jpg"
             />
           </div>
           <div class="gallery__item__text">
@@ -697,8 +723,9 @@
         <div class="gallery__item">
           <div class="gallery__item__image">
             <img
-              src="./Images/Paintings/Evening_Pasture.jpg"
+              src="./Images/Paintings/Preview/Evening_Pasture.jpg"
               alt="Cows feeding in a wooded pasture by a river"
+              data-original="Evening_Pasture.jpg"
             />
           </div>
           <div class="gallery__item__text">
@@ -719,8 +746,9 @@
         <div class="gallery__item">
           <div class="gallery__item__image">
             <img
-              src="./Images/Paintings/Woodland_Glade.jpg"
+              src="./Images/Paintings/Preview/Woodland_Glade.jpg"
               alt="The sun casting shadows through an autumnal woodland glade"
+              data-original="Woodland_Glade.jpg"
             />
           </div>
           <div class="gallery__item__text">
@@ -744,7 +772,7 @@
       <!-- <div class="gallery__item__container">
         <div class="gallery__item">
           <div class="gallery__item__image">
-            <img src="file name" alt="" />
+            <img src="file name" alt="" data-original=""/>
           </div>
           <div class="gallery__item__text">
             <div class="gallery__item__title">
