--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       src="https://kit.fontawesome.com/f8c277b1ce.js"
       crossorigin="anonymous"
     ></script>
+    <script src="modal.js" defer></script>
   </head>
   <body>
     <!-- nav menu -->
@@ -111,7 +112,7 @@
           <div class="gallery__item__image">
             <img
               src="./Images/Paintings/Preview/African_Fish_Eagle.jpg"
-              alt="African Fish Eagle flying over a lake"
+              alt="African Fish Eagle"
               data-original="African_Fish_Eagle.jpg"
             />
           </div>
@@ -134,7 +135,7 @@
           <div class="gallery__item__image">
             <img
               src="./Images/Paintings/Preview/After_the_Storm.jpg"
-              alt="Stone bridge and stormy sky"
+              alt="After the Storm"
               data-original="After_the_Storm.jpg"
             />
           </div>
@@ -157,7 +158,7 @@
           <div class="gallery__item__image">
             <img
               src="./Images/Paintings/Preview/Cliffs_Cader_Idris.jpg"
-              alt="Cader Idris covered in snow"
+              alt="Cliffs near Cader Idris"
               data-original="Cliffs_Cader_Idris.jpg"
             />
           </div>
@@ -180,7 +181,7 @@
           <div class="gallery__item__image">
             <img
               src="./Images/Paintings/Preview/Waiting_for_Spring.jpg"
-              alt="Waterfowl asleep in the snow"
+              alt="Waiting For Spring"
               data-original="Waiting_for_Spring.jpg"
             />
           </div>
@@ -203,7 +204,7 @@
           <div class="gallery__item__image">
             <img
               src="./Images/Paintings/Preview/Cottages_at_Rainow_Low.jpg"
-              alt="Cottages in Rainow village"
+              alt="Cottages at Rainow Low"
               data-original="Cottages_at_Rainow_Low.jpg"
             />
           </div>
@@ -226,7 +227,7 @@
           <div class="gallery__item__image">
             <img
               src="./Images/Paintings/Preview/Jenkin_Chapel.jpg"
-              alt="Pencil sketch of Jenkin Chapel"
+              alt="Jenkin Chapel"
               data-original="Jenkin_Chapel.jpg"
             />
           </div>
@@ -252,7 +253,7 @@
           <div class="gallery__item__image">
             <img
               src="./Images/Paintings/Preview/Freedom.jpg"
-              alt="A small sailing boat on the Sound of Mull"
+              alt="Freedom"
               data-original="Freedom.jpg"
             />
           </div>
@@ -275,7 +276,7 @@
           <div class="gallery__item__image">
             <img
               src="./Images/Paintings/Preview/Great_Northern_Divers.jpg"
-              alt="Great Northern Divers having a chat on Lochindorb"
+              alt="Great Northern Divers"
               data-original="Great_Northern_Divers.jpg"
             />
           </div>
@@ -301,7 +302,7 @@
           <div class="gallery__item__image">
             <img
               src="./Images/Paintings/Preview/Hough_Hole.jpg"
-              alt="Sketch of cottages at Hough Hole, Rainow"
+              alt="Hough Hole"
               data-original="Hough_Hole.jpg"
             />
           </div>
@@ -324,7 +325,7 @@
           <div class="gallery__item__image">
             <img
               src="./Images/Paintings/Preview/Kingfisher.jpg"
-              alt="Kingfisher perched on a branch in front of a waterfall"
+              alt="Kingfisher"
               data-original="Kingfisher.jpg"
             />
           </div>
@@ -347,7 +348,7 @@
           <div class="gallery__item__image">
             <img
               src="./Images/Paintings/Preview/In_Retirement.jpg"
-              alt="Old boats on the shore of the Isle of Mull"
+              alt="In Retirement"
               data-original="In_Retirement.jpg"
             />
           </div>
@@ -370,7 +371,7 @@
           <div class="gallery__item__image">
             <img
               src="./Images/Paintings/Preview/Over-wintering_snipe.jpg"
-              alt="Snipe probing beneath a pink sky"
+              alt="Over-wintering Snipe"
               data-original="Over-wintering_snipe.jpg"
             />
           </div>
@@ -393,7 +394,7 @@
           <div class="gallery__item__image">
             <img
               src="./Images/Paintings/Preview/Pembrokeshire_Peregrines.jpg"
-              alt="Pergrines perched on a rock in Pembrokeshire"
+              alt="Pair of Pembrokeshire Peregrines"
               data-original="Pembrokeshire_Peregrines.jpg"
             />
           </div>
@@ -416,7 +417,7 @@
           <div class="gallery__item__image">
             <img
               src="./Images/Paintings/Preview/Lakeland_Post.jpg"
-              alt="Postbox in an old stone wall"
+              alt="Lakeland Post"
               data-original="Lakeland_Post.jpg"
             />
           </div>
@@ -439,7 +440,7 @@
           <div class="gallery__item__image">
             <img
               src="./Images/Paintings/Preview/Morning_Flight.jpg"
-              alt="Barnacle Geese flying and stretching beneath a yellow morning sky"
+              alt="Morning Flight"
               data-original="Morning_Flight.jpg"
             />
           </div>
@@ -465,7 +466,7 @@
           <div class="gallery__item__image">
             <img
               src="./Images/Paintings/Preview/Newlands_Valley.jpg"
-              alt="Scenic view of Newlands Valley"
+              alt="Newlands Valley"
               data-original="Newlands_Valley.jpg"
             />
           </div>
@@ -488,7 +489,7 @@
           <div class="gallery__item__image">
             <img
               src="./Images/Paintings/Preview/Out_Shadows.jpg"
-              alt="A jaguar emerging from a dark forest in the Pantanal"
+              alt="Out of the Shadows"
               data-original="Out_Shadows.jpg"
             />
           </div>
@@ -511,7 +512,7 @@
           <div class="gallery__item__image">
             <img
               src="./Images/Paintings/Preview/The_Referee.jpg"
-              alt="Three Goldfinches arguing on a branch"
+              alt="The Referee"
               data-original="The_Referee.jpg"
             />
           </div>
@@ -537,7 +538,7 @@
           <div class="gallery__item__image">
             <img
               src="./Images/Paintings/Preview/Winter_Feeding.jpg"
-              alt="Sheep eating in front of a wintery Kerridge"
+              alt="Winter Feeding"
               data-original="Winter_Feeding.jpg"
             />
           </div>
@@ -560,7 +561,7 @@
           <div class="gallery__item__image">
             <img
               src="./Images/Paintings/Preview/Forest_Edge.jpg"
-              alt="Two people strolling by a large forest"
+              alt="Forest Edge"
               data-original="Forest_Edge.jpg"
             />
           </div>
@@ -581,12 +582,12 @@
         </div>
       </div>
 
-      <div class="gallery__item__container">
+      <div class="gallery__item__container span2">
         <div class="gallery__item">
           <div class="gallery__item__image">
             <img
               src="./Images/Paintings/Preview/Kinder_reservoir.jpg"
-              alt="View of Kinder Reservoir and Plateau"
+              alt="Kinder Reservoir and Plateau"
               data-original="Kinder_reservoir.jpg"
             />
           </div>
@@ -609,7 +610,7 @@
           <div class="gallery__item__image">
             <img
               src="./Images/Paintings/Preview/moorhen.jpg"
-              alt="A moorhen traversing lilypads"
+              alt="The Secret World of the Moorhen"
               data-original="moorhen.jpg"
             />
           </div>
@@ -632,7 +633,7 @@
           <div class="gallery__item__image">
             <img
               src="./Images/Paintings/Preview/waverockL.jpg"
-              alt="Waves crashing in front of Church Rock, Pembrokeshire"
+              alt="Church Rock"
               data-original="waverockL.jpg"
             />
           </div>
@@ -655,7 +656,7 @@
           <div class="gallery__item__image">
             <img
               src="./Images/Paintings/Preview/lighthouseSq.jpg"
-              alt="Ornsay Lighthouse viewed from the Isle of Skye"
+              alt="Ornsay Lighthouse"
               data-original="lighthouseSq.jpg"
             />
           </div>
@@ -678,7 +679,7 @@
           <div class="gallery__item__image">
             <img
               src="./Images/Paintings/Preview/Canada_Geese.jpg"
-              alt="Canada Geese foraging on a small peninsula"
+              alt="Canada Geese"
               data-original="Canada_Geese.jpg"
             />
           </div>
@@ -701,7 +702,7 @@
           <div class="gallery__item__image">
             <img
               src="./Images/Paintings/Preview/vineyard.jpg"
-              alt="A dutch style vineyard in Stellenbosch"
+              alt="Vineyard"
               data-original="vineyard.jpg"
             />
           </div>
@@ -724,7 +725,7 @@
           <div class="gallery__item__image">
             <img
               src="./Images/Paintings/Preview/Evening_Pasture.jpg"
-              alt="Cows feeding in a wooded pasture by a river"
+              alt="Evening Pasture"
               data-original="Evening_Pasture.jpg"
             />
           </div>
@@ -747,7 +748,7 @@
           <div class="gallery__item__image">
             <img
               src="./Images/Paintings/Preview/Woodland_Glade.jpg"
-              alt="The sun casting shadows through an autumnal woodland glade"
+              alt="Woodland Glade"
               data-original="Woodland_Glade.jpg"
             />
           </div>
@@ -766,6 +767,15 @@
             </div>
           </div>
         </div>
+      </div>
+
+      <div class="modal">
+        <img
+          src="./Images/Paintings/full/Pembrokeshire_Peregrines.jpg"
+          alt=""
+          class="modal__image"
+        />
+        <div class="modal__caption"></div>
       </div>
 
       <!-- new item template -->
