add sketches modal

--- a/Pages/sketches.html
+++ b/Pages/sketches.html
@@ -6,6 +6,7 @@
     <title>From my Sketchbook</title>
     <link rel="stylesheet" href="../styles.css" />
     <link rel="stylesheet" href="sketches.css" />
+    <script src="sketchModal.js" defer></script>
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -68,159 +69,190 @@
       <section class="sketch__container">
         <div class="sketch" id="sketch--first">
           <img
-            src="../Images/Sketches/Bird_Studies/Barnacle_geese.jpg"
+            src="../Images/Sketches/Preview/Barnacle_geese.jpg"
             alt="sketches of Barnacle Geese"
+            data-original="Barnacle_geese.jpg"
           />
         </div>
         <div class="sketch">
           <img
-            src="../Images/Sketches/Bird_Studies/Barnacle_geese_2.jpg"
+            src="../Images/Sketches/Preview/Barnacle_geese_2.jpg"
             alt="sketches of Barnacle Geese"
+            data-original="Barnacle_geese_2.jpg"
           />
         </div>
         <div class="sketch">
           <img
-            src="../Images/Sketches/Bird_Studies/Kingfishers.jpg"
+            src="../Images/Sketches/Preview/Kingfishers.jpg"
             alt="sketches of Kingfishers"
+            data-original="Kingfishers.jpg"
           />
         </div>
         <div class="sketch">
           <img
-            src="../Images/Sketches/Bird_Studies/Kingfishers_2.jpg"
+            src="../Images/Sketches/Preview/Kingfishers_2.jpg"
             alt="sketches of Kingfishers"
+            data-original="Kingfishers_2.jpg"
           />
         </div>
         <div class="sketch">
           <img
-            src="../Images/Sketches/Bird_Studies/male_chaffinch.jpg"
+            src="../Images/Sketches/Preview/male_chaffinch.jpg"
             alt="sketches of male chaffinch"
+            data-original="male_chaffinch.jpg"
           />
         </div>
         <div class="sketch">
           <img
-            src="../Images/Sketches/Bird_Studies/mute_swan.jpg"
+            src="../Images/Sketches/Preview/mute_swan.jpg"
             alt="sketches of mute swan"
+            data-original="mute_swan.jpg"
           />
         </div>
         <div class="sketch">
           <img
-            src="../Images/Sketches/Bird_Studies/Pintail_studies.jpg"
+            src="../Images/Sketches/Preview/Pintail_studies.jpg"
             alt="sketches of pintail"
+            data-original="Pintail_studies.jpg"
           />
         </div>
         <div class="sketch">
           <img
-            src="../Images/Sketches/Bird_Studies/Slavonian_Grebe.jpg"
+            src="../Images/Sketches/Preview/Slavonian_Grebe.jpg"
             alt="sketches of Slavonian grebe"
+            data-original="Slavonian_Grebe.jpg"
           />
         </div>
         <div class="sketch">
           <img
-            src="../Images/Sketches/Bird_Studies/snipe_and_shelduck.jpg"
+            src="../Images/Sketches/Preview/snipe_and_shelduck.jpg"
             alt="sketches of snipe"
+            data-original="snipe_and_shelduck.jpg"
           />
         </div>
         <div class="sketch">
           <img
-            src="../Images/Sketches/Bird_Studies/wader_studies.jpg"
+            src="../Images/Sketches/Preview/wader_studies.jpg"
             alt="sketches of waders"
+            data-original="wader_studies.jpg"
           />
         </div>
         <div class="sketch">
           <img
-            src="../Images/Sketches/Landscapes/3_Shires_Head.jpg"
+            src="../Images/Sketches/Preview/3_Shires_Head.jpg"
             alt="sketches of 3 shires head"
+            data-original="3_Shires_Head.jpg"
           />
         </div>
         <div class="sketch">
           <img
-            src="../Images/Sketches/Landscapes/Calke_Abbey_NT.jpg"
+            src="../Images/Sketches/Preview/Calke_Abbey_NT.jpg"
             alt="sketches of calke abbey"
+            data-original="Calke_Abbey_NT.jpg"
           />
         </div>
         <div class="sketch">
           <img
-            src="../Images/Sketches/Landscapes/field_barn.jpg"
+            src="../Images/Sketches/Preview/field_barn.jpg"
             alt="sketches of field barn"
+            data-original="field_barn.jpg"
           />
         </div>
         <div class="sketch">
           <img
-            src="../Images/Sketches/Landscapes/lakes.jpg"
+            src="../Images/Sketches/Preview/lakes.jpg"
             alt="sketches of lakes"
+            data-original="lakes.jpg"
           />
         </div>
         <div class="sketch">
           <img
-            src="../Images/Sketches/Landscapes/Llanrwst_bridge.jpg"
+            src="../Images/Sketches/Preview/Llanrwst_bridge.jpg"
             alt="sketches of LLanrwst Bridge"
+            data-original="Llanrwst_bridge.jpg"
           />
         </div>
         <div class="sketch">
           <img
-            src="../Images/Sketches/Landscapes/mill_stones.jpg"
+            src="../Images/Sketches/Preview/mill_stones.jpg"
             alt="sketches of mill stones"
+            data-original="mill_stones.jpg"
           />
         </div>
         <div class="sketch">
           <img
-            src="../Images/Sketches/Landscapes/New_Zealand_coast.jpg"
+            src="../Images/Sketches/Preview/New_Zealand_coast.jpg"
             alt="sketches of New Zealand coast"
+            data-original="New_Zealand_coast.jpg"
           />
         </div>
         <div class="sketch">
           <img
-            src="../Images/Sketches/Landscapes/Paxtons_Tower.jpg"
+            src="../Images/Sketches/Preview/Paxtons_Tower.jpg"
             alt="sketches of Paxtons Tower"
+            data-original="Paxtons_Tower.jpg"
           />
         </div>
         <div class="sketch">
           <img
-            src="../Images/Sketches/Landscapes/Pembrokeshire_coast.jpg"
+            src="../Images/Sketches/Preview/Pembrokeshire_coast.jpg"
             alt="sketches of Pembrokeshire coast"
+            data-original="Pembrokeshire_coast.jpg"
           />
         </div>
         <div class="sketch">
           <img
-            src="../Images/Sketches/Landscapes/Sutton_on_the_hill.jpg"
+            src="../Images/Sketches/Preview/Sutton_on_the_hill.jpg"
             alt="sketches of Sutton-on-the-hill"
+            data-original="Sutton_on_the_hill.jpg"
           />
         </div>
         <div class="sketch">
           <img
-            src="../Images/Sketches/Natural_History/blackberries.jpg"
+            src="../Images/Sketches/Preview/blackberries.jpg"
             alt="sketches of blackberries"
+            data-original="blackberries.jpg"
           />
         </div>
         <div class="sketch">
           <img
-            src="../Images/Sketches/Natural_History/cattle sketches.jpg"
+            src="../Images/Sketches/Preview/cattle sketches.jpg"
             alt="sketches of cattle"
+            data-original="cattle sketches.jpg"
           />
         </div>
         <div class="sketch">
           <img
-            src="../Images/Sketches/Natural_History/hawthorn.jpg"
+            src="../Images/Sketches/Preview/hawthorn.jpg"
             alt="sketches of hawthorn"
+            data-original="hawthorn.jpg"
           />
         </div>
         <div class="sketch">
           <img
-            src="../Images/Sketches/Natural_History/ivy_leaf_studies.jpg"
+            src="../Images/Sketches/Preview/ivy_leaf_studies.jpg"
             alt="sketches of ivy"
+            data-original="ivy_leaf_studies.jpg"
           />
         </div>
         <div class="sketch">
           <img
-            src="../Images/Sketches/Natural_History/rose.jpg"
+            src="../Images/Sketches/Preview/rose.jpg"
             alt="sketches of roses"
+            data-original="rose.jpg"
           />
         </div>
         <div class="sketch" id="sketch--last">
           <img
-            src="../Images/Sketches/Natural_History/Rowan.jpg"
+            src="../Images/Sketches/Preview/Rowan.jpg"
             alt="sketches of Rowan"
+            data-original="Rowan.jpg"
           />
+        </div>
+        <!-- modal -->
+        <div class="modal">
+          <img src="" alt="" class="modal__image" />
+          <!-- <div class="modal__caption"></div> -->
         </div>
       </section>
     </main>
